--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>React Redux App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="margin: 0; padding: 0;">
+    <noscript>You need t/o enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
